src/test/resources/Parser/SyntaxErrors/IncompatibleTypesAssignment.front
class A {
    A a := new B();
}
class B {
    constructors;
    bool b;
}